--- a/src/style1.css
+++ b/src/style1.css
@@ -1,28 +1,69 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Supermercado+One');
 
-/* Use the 'Lato' font family at 18px throughout the body of the document, and cover the background with the './img/map-bg.jpg' image. */
-nav {font-family: sans-serif; font-size: 10px;}
 
-#main {width: 900px; margin: 10px auto;}
-/* Use the 'Supermercado One' font at 45px (colored #5d4037) for the restaurant name. */
+body {
+    font-family: 'Lato',sans-serif;
+    font-size: 18px;
+    background-image: url(img/map-bg.jpg);
+}
 
-/* Set the separator between the columns (the "column-rule") to be 2px dashed rosybrown. */
-#menu {columns: 400px 2; column-gap: 100px;}
-section {margin-bottom: 50px;}
+nav {
+    font-family: sans-serif;
+    font-size: 10px;
+}
 
-/* Show each of the section headings of the menu (e.g. "Starters") in small caps, colored #6d4c41. */
-h2 {margin: 0;}
+#main {
+    width: 900px;
+    margin: 10px auto;
+}
 
-/* Make the name of each menu item appear in bold in a 20px size. */
+#main header h1 {
+    font-family: 'Supermercado One', sans-serif;
+    font-size: 45px;
+    color: #5d4037;
+}
 
+#menu {
+    columns: 400px 2;
+    column-gap: 100px;
+    column-rule: 2px dashed rosybrown;
+}
 
+section {
+    margin-bottom: 50px;
+}
 
-dd {margin: 0 0 12px 0; display: flex;}
+section h2 {
+    font-variant: small-caps;
+    color: #6d4c41;
+}
 
-.details {order: 1;}
+h2 {
+    margin: 0;
+}
 
-/* Show the price of each item in a large font, in the color named 'firebrick' */
-.price {order: 2; padding-left: 10px;}
+section dt {
+    font-size: 20px;
+    font-weight: bold;
+}
 
-/* Draw a 2px dashed rosybrown border around the address/footer */
-address {padding: 10px;}
+dd {
+    margin: 0 0 12px 0;
+    display: flex;
+}
+
+.details {
+    order: 1;
+}
+
+.price {
+    order: 2;
+    padding-left: 10px;
+    font-size: large;
+    color: firebrick;
+}
+
+address {
+    padding: 10px;
+    border: 2px dashed rosybrown;
+}
